--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ click==8.1.3
 dataclasses-json==0.5.7
 decorator==5.1.1
 entrypoints==0.4
+faiss-cpu==1.7.4
 frozenlist==1.3.3
 gitdb==4.0.10
 GitPython==3.1.31
@@ -28,6 +29,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 numexpr==2.8.4
 numpy==1.24.3
+openai==0.27.6
 openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.1
@@ -44,6 +46,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
+regex==2023.5.5
 requests==2.30.0
 rich==13.3.5
 six==1.16.0
@@ -51,9 +54,11 @@ smmap==5.0.0
 SQLAlchemy==2.0.14
 streamlit==1.22.0
 tenacity==8.2.2
+tiktoken==0.4.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.2
+tqdm==4.65.0
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 tzdata==2023.3
